--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
                 data-captionhidden="off"
                 style="z-index: 6"
               >
-                <a href="https://1.envato.market/nJev6">Purchase now !</a>
+                <a href="#">Purchase now !</a>
               </div>
             </li>
 
@@ -1225,7 +1225,10 @@
                 </div>
               </div>
               <h5 style="color: black" class="padd_top6 lessmar">
-                <strong>Young Professional</strong>
+                <strong
+                  >Young <br />
+                  Professional</strong
+                >
               </h5>
               <div class="title_bottom_line"></div>
               <div class="clearfix"></div>
@@ -1289,158 +1292,6 @@
       </div>
       <!--end section holder 1-->
 
-      <div class="section_holder14">
-        <div class="container">
-          <h1 class="section_title">About Interview Saarthi</h1>
-          <div class="section_title_line"></div>
-          <p style="color: white" class="section_title_bottomtext">
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-            Suspendisse et justo. Praesent mattis commodo augue. Aliquam ornare
-            hendrerit augue
-          </p>
-
-          <div class="one_half">
-            <h2 style="text-align: center; color: white; font-weight: 700">
-              Problems
-            </h2>
-            <div class="text_box active">
-              <div class="box_inner">
-                <div class="text">
-                  <ol style="color: white" class="list_st4">
-                    <li>Who Will Take My Interview ...?</li>
-                    <li>Will I Get Detailed Feedback ...?</li>
-                    <li>Can i Book 1-0n-1 Session With Interviewer ...?</li>
-                    <li>Will It Be a 360° Feedback ...?</li>
-                  </ol>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!--end item-->
-
-          <div class="one_half last">
-            <!--end item-->
-            <h2 style="text-align: center; color: white; font-weight: 700">
-              Solutions
-            </h2>
-            <div class="text_box">
-              <div style="border: 1px solid white" class="box_inner">
-                <!-- <div class="icon_holder">
-                  <div class="icon">
-                    <span
-                      class="glyph-item mega"
-                      aria-hidden="true"
-                      data-icon="&#xe060;"
-                      data-js-prompt="&amp;#xe005;"
-                    ></span>
-                  </div>
-                </div> -->
-                <div style="color: white" class="text">
-                  <ol class="list_st4">
-                    <li>Real Industry Experts</li>
-                    <li>Comprehesive Feedback</li>
-                    <li>Book 1-0n-1 session with Interviewer</li>
-
-                    <li>Feedback will owner technical & soft skill both</li>
-                  </ol>
-                </div>
-              </div>
-            </div>
-            <!--end item-->
-          </div>
-          <!--end item-->
-
-          <!-- <div class="one_full">
-            <a class="readmore_but3" href="#">Readmore</a>
-            <a class="readmore_but4" href="#">Purchase now !</a>
-          </div> -->
-        </div>
-      </div>
-
-      <!-- End Section -->
-
-      <div class="clearfix"></div>
-      <div class="section_holder26">
-        <div class="container">
-          <h1 class="section_title two">Our Services</h1>
-          <div class="section_title_line two"></div>
-          <p class="section_title_bottomtext">
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-            Suspendisse et justo. Praesent mattis commodo augue. Aliquam ornare
-            hendrerit augue
-          </p>
-          <div class="clearfix"></div>
-
-          <div class="one_fourth">
-            <div class="icon">
-              <span
-                class="glyph-item mega"
-                aria-hidden="true"
-                data-icon="&#xe036;"
-              ></span>
-            </div>
-            <h4>Reduce Stress & Anxity</h4>
-            <p>
-              Lorem Ipsum is simply dummy text of theprinting and typesetting it
-              has the randomised wordswhich .
-            </p>
-          </div>
-          <!-- end item-->
-
-          <div class="one_fourth">
-            <div class="icon">
-              <span
-                class="glyph-item mega"
-                aria-hidden="true"
-                data-icon="&#xe034;"
-              ></span>
-            </div>
-            <h4>Boots Confidence With Practice</h4>
-            <p>
-              Lorem Ipsum is simply dummy text of theprinting and typesetting it
-              has the randomised wordswhich .
-            </p>
-          </div>
-          <!-- end item-->
-
-          <div class="one_fourth active">
-            <div class="icon">
-              <span
-                class="glyph-item mega"
-                aria-hidden="true"
-                data-icon="&#xe037;"
-              ></span>
-            </div>
-            <h4>Actionable Feedback</h4>
-            <p>
-              Lorem Ipsum is simply dummy text of theprinting and typesetting it
-              has the randomised wordswhich .
-            </p>
-          </div>
-          <!-- end item-->
-
-          <div class="one_fourth last">
-            <div class="icon">
-              <span
-                class="glyph-item mega"
-                aria-hidden="true"
-                data-icon="&#xe045;"
-              ></span>
-            </div>
-            <h4>Situation Based Questions</h4>
-            <p>
-              Lorem Ipsum is simply dummy text of theprinting and typesetting it
-              has the randomised wordswhich .
-            </p>
-          </div>
-          <!-- end item-->
-
-          <!-- <a class="readmore_but9" href="#">Read more</a>
-          <a class="readmore_but10" href="#">Purchase now !</a> -->
-        </div>
-      </div>
-
-      <div class="clearfix"></div>
       <div class="section_holder2">
         <div class="container">
           <div class="one_half">
@@ -1524,17 +1375,170 @@
       </div>
       <!--end section holder 2-->
 
+      <div class="clearfix"></div>
+      <div class="section_holder26">
+        <div class="container">
+          <h1 class="section_title two">Our Services</h1>
+          <div class="section_title_line two"></div>
+          <p class="section_title_bottomtext">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+            Suspendisse et justo. Praesent mattis commodo augue. Aliquam ornare
+            hendrerit augue
+          </p>
+          <div class="clearfix"></div>
+
+          <div class="one_fourth">
+            <div class="icon">
+              <span
+                class="glyph-item mega"
+                aria-hidden="true"
+                data-icon="&#xe036;"
+              ></span>
+            </div>
+            <h4>Reduce Stress & Anxity</h4>
+            <p>
+              Lorem Ipsum is simply dummy text of theprinting and typesetting it
+              has the randomised wordswhich .
+            </p>
+          </div>
+          <!-- end item-->
+
+          <div class="one_fourth">
+            <div class="icon">
+              <span
+                class="glyph-item mega"
+                aria-hidden="true"
+                data-icon="&#xe034;"
+              ></span>
+            </div>
+            <h4>Boots Confidence With Practice</h4>
+            <p>
+              Lorem Ipsum is simply dummy text of theprinting and typesetting it
+              has the randomised wordswhich .
+            </p>
+          </div>
+          <!-- end item-->
+
+          <div class="one_fourth active">
+            <div class="icon">
+              <span
+                class="glyph-item mega"
+                aria-hidden="true"
+                data-icon="&#xe037;"
+              ></span>
+            </div>
+            <h4>Actionable Feedback</h4>
+            <p>
+              Lorem Ipsum is simply dummy text of theprinting and typesetting it
+              has the randomised wordswhich .
+            </p>
+          </div>
+          <!-- end item-->
+
+          <div class="one_fourth last">
+            <div class="icon">
+              <span
+                class="glyph-item mega"
+                aria-hidden="true"
+                data-icon="&#xe045;"
+              ></span>
+            </div>
+            <h4>Situation Based Questions</h4>
+            <p>
+              Lorem Ipsum is simply dummy text of theprinting and typesetting it
+              has the randomised wordswhich .
+            </p>
+          </div>
+          <!-- end item-->
+
+          <!-- <a class="readmore_but9" href="#">Read more</a>
+          <a class="readmore_but10" href="#">Purchase now !</a> -->
+        </div>
+      </div>
+
+      <div class="clearfix"></div>
+
       <!--end section holder 3-->
+
+      <div class="section_holder14">
+        <div class="container">
+          <h1 class="section_title">About Interview Saarthi</h1>
+          <div class="section_title_line"></div>
+          <p style="color: white" class="section_title_bottomtext">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+            Suspendisse et justo. Praesent mattis commodo augue. Aliquam ornare
+            hendrerit augue
+          </p>
+
+          <div class="one_half">
+            <h2 style="text-align: center; color: white; font-weight: 700">
+              Problems
+            </h2>
+            <div class="text_box active">
+              <div class="box_inner">
+                <div class="text">
+                  <ol style="color: white" class="list_st4">
+                    <li>Who Will Take My Interview ...?</li>
+                    <li>Will I Get Detailed Feedback ...?</li>
+                    <li>Can i Book 1-0n-1 Session With Interviewer ...?</li>
+                    <li>Will It Be a 360° Feedback ...?</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--end item-->
+
+          <div class="one_half last">
+            <!--end item-->
+            <h2 style="text-align: center; color: white; font-weight: 700">
+              Solutions
+            </h2>
+            <div class="text_box">
+              <div style="border: 1px solid white" class="box_inner">
+                <!-- <div class="icon_holder">
+                  <div class="icon">
+                    <span
+                      class="glyph-item mega"
+                      aria-hidden="true"
+                      data-icon="&#xe060;"
+                      data-js-prompt="&amp;#xe005;"
+                    ></span>
+                  </div>
+                </div> -->
+                <div style="color: white" class="text">
+                  <ol class="list_st4">
+                    <li>Real Industry Experts</li>
+                    <li>Comprehesive Feedback</li>
+                    <li>Book 1-0n-1 session with Interviewer</li>
+
+                    <li>Feedback will owner technical & soft skill both</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+            <!--end item-->
+          </div>
+          <!--end item-->
+
+          <!-- <div class="one_full">
+            <a class="readmore_but3" href="#">Readmore</a>
+            <a class="readmore_but4" href="#">Purchase now !</a>
+          </div> -->
+        </div>
+      </div>
+
+      <!-- End Section -->
       <div class="clearfix"></div>
       <div class="section_holder4">
         <div class="container">
-          <h1 class="section_title two">Our Process</h1>
+          <h1 class="section_title two">Success Report</h1>
           <div class="section_title_line two"></div>
           <h3
             style="color: black; font-weight: bold"
             class="section_title_bottomtext"
           >
-            Success Report
+            Our Process
           </h3>
           <div class="clearfix"></div>
           <div class="one_fourth">
@@ -1872,7 +1876,7 @@
       <div class="clearfix"></div>
       <div class="section_holder9">
         <div class="container">
-          <h1 class="section_title">From The Blog</h1>
+          <h1 class="section_title">Success Stories</h1>
           <div class="section_title_line"></div>
           <p class="section_title_bottomtext">
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -2035,7 +2039,7 @@
       <div class="clearfix"></div>
       <div class="section_holder11">
         <div class="container">
-          <h1 class="section_title">Our Clints Says</h1>
+          <h1 class="section_title">Industry Experts</h1>
           <div class="section_title_line"></div>
           <p class="section_title_bottomtext">
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -2323,28 +2327,34 @@
             </section>
           </div>
           <div class="one_third last">
-            <h3 class="section_title">Why Lemoni ?</h3>
+            <h3 class="section_title">Why Interview Saarthi ?”</h3>
             <div class="title_bottom_line right"></div>
             <div class="clearfix"></div>
             <ul class="tabs3">
               <li>
                 <a href="#example-3-tab-1" target="_self"
-                  >Unique
+                  >About Us
                   <div class="tab_arrow_down"></div>
                 </a>
               </li>
               <li>
                 <a href="#example-3-tab-2" target="_self"
-                  >Responsive
+                  >Why Us
                   <div class="tab_arrow_down"></div>
                 </a>
               </li>
               <li>
+                <a href="#example-3-tab-2" target="_self"
+                  >Contact Us
+                  <div class="tab_arrow_down"></div>
+                </a>
+              </li>
+              <!-- <li>
                 <a href="#example-3-tab-3" target="_self" class="last"
                   >Easy to Edit
                   <div class="tab_arrow_down"></div>
                 </a>
-              </li>
+              </li> -->
             </ul>
             <div class="tabs-content3">
               <div id="example-3-tab-1" class="tabs-panel3">
@@ -2492,15 +2502,10 @@
             <div class="social_icons_holder">
               <ul class="social_icons">
                 <li>
-                  <a target="_blank" href="https://www.facebook.com/codelayers"
-                    ><i class="fa fa-facebook"></i
-                  ></a>
+                  <a target="_blank" href=""><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a
-                    target="_blank"
-                    href="https://twitter.com/codelayers"
-                    class="active"
+                  <a target="_blank" href="" class="active"
                     ><i style="color: white" class="fa fa-twitter"></i
                   ></a>
                 </li>
@@ -2519,13 +2524,13 @@
             <div class="quick_links_holder">
               <ul class="quick_links">
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
+                <!-- <li><a href="#">Services</a></li>
                 <li><a href="#">Features</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Portfolio</a></li> -->
                 <li><a href="#">Blog</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Pages</a></li>
-                <li><a href="#" class="last">Contact Us</a></li>
+                <!-- <li><a href="#">FAQ</a></li> -->
+                <li><a href="#">Contact Us</a></li>
+                <!-- <li><a href="#" class="last">Contact Us</a></li> -->
               </ul>
             </div>
           </div>
@@ -2558,12 +2563,9 @@
 
       <div class="copyrights">
         <div class="container">
-          Copyright © 2014 - 2019
-          <a href="https://1.envato.market/lemoni-html-by-codelayers"
-            >Lemoni html</a
-          >
-          By <a href="https://1.envato.market/codelayers">Codelayers</a> | All
-          rights reserved.
+          Copyright @ 2021 Copyright © 2014
+          <a href="#">Lemoni html</a>
+          By <a href="#">Interview-Saarthi</a> | All rights reserved.
         </div>
       </div>
       <!--end copyrights-->
