update some changes

--- a/blog2.html
+++ b/blog2.html
@@ -815,8 +815,8 @@
 
       <div class="header_medium two">
         <div class="container">
-          <h3 class="bigtext"><span>We are</span> Lemoni.</h3>
-          <h3 class="smalltext"><span>We Creat</span> Unique Themes</h3>
+          <h3 class="bigtext"><span>We are</span> Interview-Saarthi</h3>
+          <!-- <h3 class="smalltext"><span>We Creat</span> Unique Themes</h3> -->
         </div>
       </div>
       <!--end header medium-->
@@ -1064,7 +1064,7 @@
       </div>
       <!-- end section-->
 
-      <div class="clearfix"></div>
+<div class="clearfix"></div>
       <div class="footer">
         <div class="container">
           <div class="one_fourth">
@@ -1152,16 +1152,11 @@
             <div class="social_icons_holder">
               <ul class="social_icons">
                 <li>
-                  <a target="_blank" href="https://www.facebook.com/codelayers"
-                    ><i class="fa fa-facebook"></i
-                  ></a>
+                  <a target="_blank" href=""><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a
-                    target="_blank"
-                    href="https://twitter.com/codelayers"
-                    class="active"
-                    ><i class="fa fa-twitter"></i
+                  <a target="_blank" href="" class="active"
+                    ><i style="color: white" class="fa fa-twitter"></i
                   ></a>
                 </li>
                 <li>
@@ -1179,13 +1174,13 @@
             <div class="quick_links_holder">
               <ul class="quick_links">
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
+                <!-- <li><a href="#">Services</a></li>
                 <li><a href="#">Features</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Portfolio</a></li> -->
                 <li><a href="#">Blog</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Pages</a></li>
-                <li><a href="#" class="last">Contact Us</a></li>
+                <!-- <li><a href="#">FAQ</a></li> -->
+                <li><a href="#">Contact Us</a></li>
+                <!-- <li><a href="#" class="last">Contact Us</a></li> -->
               </ul>
             </div>
           </div>
@@ -1193,6 +1188,11 @@
 
           <div class="one_fourth last">
             <div class="newsletter">
+              <!--<form method="get" action="index.html">
+            <input class="email_input" name="samplees" id="samplees" value="E-mail Address" type="text">
+            <input name="" value="Submit" class="email_submit nine" type="submit">
+          </form>-->
+
               <input
                 class="email_input"
                 type="search"
@@ -1213,12 +1213,9 @@
 
       <div class="copyrights">
         <div class="container">
-          Copyright © 2014 - 2019
-          <a href="https://1.envato.market/lemoni-html-by-codelayers"
-            >Lemoni html</a
-          >
-          By <a href="https://1.envato.market/codelayers">Codelayers</a> | All
-          rights reserved.
+          Copyright @ 2021 Copyright
+          
+          By <a href="#">Interview-Saarthi</a> | All rights reserved.
         </div>
       </div>
       <!--end copyrights-->
