--- a/index.html
+++ b/index.html
@@ -2563,8 +2563,8 @@
 
       <div class="copyrights">
         <div class="container">
-          Copyright @ 2021 Copyright © 2014
-          <a href="#">Lemoni html</a>
+          Copyright @ 2021 Copyright
+          
           By <a href="#">Interview-Saarthi</a> | All rights reserved.
         </div>
       </div>
