--- a/contact2.html
+++ b/contact2.html
@@ -976,16 +976,11 @@
             <div class="social_icons_holder">
               <ul class="social_icons">
                 <li>
-                  <a target="_blank" href="https://www.facebook.com/codelayers"
-                    ><i class="fa fa-facebook"></i
-                  ></a>
+                  <a target="_blank" href=""><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a
-                    target="_blank"
-                    href="https://twitter.com/codelayers"
-                    class="active"
-                    ><i class="fa fa-twitter"></i
+                  <a target="_blank" href="" class="active"
+                    ><i style="color: white" class="fa fa-twitter"></i
                   ></a>
                 </li>
                 <li>
@@ -1003,13 +998,13 @@
             <div class="quick_links_holder">
               <ul class="quick_links">
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
+                <!-- <li><a href="#">Services</a></li>
                 <li><a href="#">Features</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Portfolio</a></li> -->
                 <li><a href="#">Blog</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Pages</a></li>
-                <li><a href="#" class="last">Contact Us</a></li>
+                <!-- <li><a href="#">FAQ</a></li> -->
+                <li><a href="#">Contact Us</a></li>
+                <!-- <li><a href="#" class="last">Contact Us</a></li> -->
               </ul>
             </div>
           </div>
@@ -1017,6 +1012,11 @@
 
           <div class="one_fourth last">
             <div class="newsletter">
+              <!--<form method="get" action="index.html">
+            <input class="email_input" name="samplees" id="samplees" value="E-mail Address" type="text">
+            <input name="" value="Submit" class="email_submit nine" type="submit">
+          </form>-->
+
               <input
                 class="email_input"
                 type="search"
@@ -1037,11 +1037,7 @@
 
       <div class="copyrights">
         <div class="container">
-          Copyright © 2014 - 2019
-          <a href="https://1.envato.market/lemoni-html-by-codelayers"
-            >Lemoni html</a
-          >
-          By <a href="https://1.envato.market/codelayers">Codelayers</a> | All
+          Copyright @ 2021 Copyright By <a href="#">Interview-Saarthi</a> | All
           rights reserved.
         </div>
       </div>
