--- a/contact2.html
+++ b/contact2.html
@@ -574,7 +574,7 @@
                   <br />
                   <!-- FAX: +1 0123-4567-8900<br /> -->
                   E-mail:
-                  <a href="mailto:email@example.com">careers@alishia.co.in</a
+                  <a href="mailto:careers@alishia.co.in">careers@alishia.co.in</a
                   ><br />
                   Website: <a href="index.html">Interview Saarthi</a>
                 </li>
