--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@
               <div
                 class="tp-caption lfr"
                 data-x="42"
-                data-y="60"
+                data-y="110"
                 data-speed="800"
                 data-start="1000"
                 data-easing="Back.easeOut"
@@ -1011,7 +1011,11 @@
                 data-captionhidden="on"
                 style="z-index: 8"
               >
-                <img src="images/sliders/slide3_img1.png" alt="" />
+                <img
+                  style="width: 550px"
+                  src="images/sliders/interview.png"
+                  alt=""
+                />
               </div>
               <div
                 class="tp-caption text6 randomrotate customout tp-resizeme"
@@ -1167,7 +1171,7 @@
               <div
                 class="tp-caption lfr"
                 data-x="42"
-                data-y="60"
+                data-y="120"
                 data-speed="800"
                 data-start="1000"
                 data-easing="Back.easeOut"
@@ -1175,7 +1179,7 @@
                 data-captionhidden="on"
                 style="z-index: 8"
               >
-                <img src="images/sliders/slide3_img1.png" alt="" />
+                <img src="images/sliders/family.png" alt="" />
               </div>
               <div
                 class="tp-caption text6 randomrotate customout tp-resizeme"
@@ -1330,7 +1334,7 @@
               <div
                 class="tp-caption lfr"
                 data-x="42"
-                data-y="60"
+                data-y="110"
                 data-speed="800"
                 data-start="1000"
                 data-easing="Back.easeOut"
@@ -1338,7 +1342,7 @@
                 data-captionhidden="on"
                 style="z-index: 8"
               >
-                <img src="images/sliders/slide3_img1.png" alt="" />
+                <img src="images/sliders/frinds.png" alt="" />
               </div>
               <div
                 class="tp-caption text6 randomrotate customout tp-resizeme"
