--- a/index.html
+++ b/index.html
@@ -232,6 +232,16 @@
       .post {
         color: white !important;
       }
+      .list_st5 {
+        text-align: center;
+      }
+      .purchase {
+        text-align: center;
+        margin: 20px;
+      }
+      .purchase a {
+        font-size: 25px;
+      }
     </style>
   </head>
 
@@ -255,7 +265,9 @@
                 <div class="right">
                   <ul>
                     <li>
-                      <a target="_blank" href=""
+                      <a
+                        target="_blank"
+                        href="https://www.facebook.com/ALishia-Talent-Management-107450727437819/"
                         ><i class="fa fa-facebook"></i
                       ></a>
                     </li>
@@ -264,11 +276,12 @@
                         ><i class="fa fa-twitter"></i
                       ></a>
                     </li>
-                    <li>
-                      <a href="#"><i class="fa fa-google-plus"></i></a>
-                    </li>
+
                     <li class="last">
-                      <a href="#"><i class="fa fa-linkedin"></i></a>
+                      <a
+                        href="https://www.linkedin.com/in/alishia-talent-management-03589819a"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
                     </li>
                   </ul>
                 </div>
@@ -1533,53 +1546,6 @@
           </div>
           <!--end item-->
 
-          <div class="one_fourth">
-            <div class="box active">
-              <div class="diamond">
-                <div class="icon">
-                  <span
-                    style="color: white"
-                    class="glyph-item mega"
-                    aria-hidden="true"
-                    data-icon="&#xe053;"
-                  ></span>
-                </div>
-              </div>
-              <h5 style="color: black" class="padd_top6 lessmar">
-                <strong>Management Professional</strong>
-              </h5>
-              <div class="title_bottom_line"></div>
-              <div class="clearfix"></div>
-              <p>Ex with 5 - 10 year of work exp</p>
-              <br />
-              <br />
-              <a href="#" class="readmore">Know more...</a>
-            </div>
-          </div>
-          <!--end item-->
-
-          <div class="one_fourth last">
-            <div class="box">
-              <div class="diamond">
-                <div class="icon">
-                  <span
-                    class="glyph-item mega"
-                    aria-hidden="true"
-                    data-icon="&#xe056;"
-                  ></span>
-                </div>
-              </div>
-              <h5 style="color: black" class="padd_top6 lessmar">
-                <strong>Mid Management Professional</strong>
-              </h5>
-              <div class="title_bottom_line"></div>
-              <div class="clearfix"></div>
-              <p>Ex with 10 year bless exp</p>
-              <br />
-              <br />
-              <a href="#" class="readmore">Know more...</a>
-            </div>
-          </div>
           <!--end item-->
         </div>
       </div>
@@ -1635,7 +1601,7 @@
 
                   <li>
                     <h5 style="color: white">
-                      At InterviewSaarth, we help you prepare for such question
+                      At InterviewSaarth we help you prepare for such question
                       and situation so that you are well prepared to maneuverer
                       your responses under the spot light.
                     </h5>
@@ -1672,7 +1638,7 @@
       <div class="clearfix"></div>
       <div class="section_holder26">
         <div class="container">
-          <h1 class="section_title two">Our Advantage</h1>
+          <h1 class="section_title two">Advantage</h1>
           <div class="section_title_line two"></div>
           <!-- <p class="section_title_bottomtext">
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -1757,7 +1723,7 @@
 
       <div class="section_holder14">
         <div class="container">
-          <h1 class="section_title">About Interview Saarthi</h1>
+          <h1 class="section_title">About InterviewSaarthi</h1>
           <div class="section_title_line"></div>
           <!-- <p style="color: white" class="section_title_bottomtext">
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -1775,8 +1741,8 @@
                   <ol style="color: white" class="list_st4">
                     <li>Who Will Take My Interview ...?</li>
                     <li>Will I Get Detailed Feedback ...?</li>
-                    <li>Can i Book 1-0n-1 Session With Interviewer ...?</li>
-                    <li>Will It Be a 360° Feedback ...?</li>
+                    <li>Can I Book 1-0n-1 Session With Interviewer ...?</li>
+                    <li>Will It be a 360° Feedback ...?</li>
                   </ol>
                 </div>
               </div>
@@ -1807,7 +1773,7 @@
                     <li>Comprehesive Feedback</li>
                     <li>Book 1-0n-1 session with Interviewer</li>
 
-                    <li>Feedback will owner technical & soft skill both</li>
+                    <li>Feedback for technical & soft skill both</li>
                   </ol>
                 </div>
               </div>
@@ -1888,63 +1854,42 @@
                       style="color: white; text-align: center"
                       class="uppercase"
                     >
-                      <strong>Young Professional</strong>
-                    </h3>
-                    <div class="skill_img">
-                      <img
-                        src="images/site-img16.png"
-                        alt=""
-                        class="img_size1"
-                      />
-                      <div class="bottom_strip"></div>
-                      <div class="bottom_shape"></div>
-                    </div>
-                  </div>
-                  <!--end item-->
-
-                  <div class="one_half last">
-                    <h3
-                      style="color: white; text-align: center"
-                      class="uppercase"
-                    >
                       <strong>Budding Professional</strong>
                     </h3>
                     <div class="list_st5 two">
-                      <div class="icon blue"><i class="fa fa-leaf"></i></div>
                       <div style="color: white" class="text">
                         Final Semester Student
                       </div>
                     </div>
                     <div class="list_st5 two">
-                      <div class="icon blue"><i class="fa fa-leaf"></i></div>
                       <div style="color: white" class="text">
                         Entering on Industry
                       </div>
                     </div>
                     <div class="list_st5 two">
-                      <div class="icon blue"><i class="fa fa-leaf"></i></div>
                       <div style="color: white" class="text">
                         Don't Know Much About Interviews
                       </div>
                     </div>
                     <div class="list_st5 two">
-                      <div class="icon blue"><i class="fa fa-leaf"></i></div>
                       <div style="color: white" class="text">
                         Need Guidence of Prepration
                       </div>
                     </div>
                     <div class="list_st5 two">
-                      <div class="icon blue"><i class="fa fa-leaf"></i></div>
                       <div style="color: white" class="text">
                         Need Industry View
                       </div>
                     </div>
                     <div class="list_st5 two">
-                      <div class="icon blue"><i class="fa fa-leaf"></i></div>
                       <div style="color: white" class="text">
                         Don't Know Skill GAP
                       </div>
                     </div>
+                  </div>
+                  <!--end item-->
+
+                  <div class="one_half last">
                     <!-- <ul style="color: white" class="ser_list">
                       <li>
                         <i class="fa fa-check"></i> Nullam turpis Cras dapibus
@@ -1974,15 +1919,34 @@
                         </span>
                       </div>
                     </div> -->
+                    <h3
+                      style="color: white; text-align: center"
+                      class="uppercase"
+                    >
+                      <strong>Young Professional</strong>
+                    </h3>
+                    <div class="skill_img">
+                      <img
+                        src="images/site-img16.png"
+                        alt=""
+                        class="img_size1"
+                      />
+                      <div class="bottom_strip"></div>
+                      <div class="bottom_shape"></div>
+                    </div>
                     <!-- end section -->
                   </div>
                 </li>
                 <!--end item-->
               </ul>
+
               <!-- <ul class="flex-direction-nav three">
                 <li><a class="flex-prev three" href="#"></a></li>
                 <li><a class="flex-next three" href="#"></a></li>
               </ul> -->
+            </div>
+            <div class="purchase">
+              <a href="" class="btn btn-primary">Purchase</a>
             </div>
           </section>
         </div>
@@ -2619,18 +2583,24 @@
             <div class="social_icons_holder">
               <ul class="social_icons">
                 <li>
-                  <a target="_blank" href=""><i class="fa fa-facebook"></i></a>
+                  <a
+                    target="_blank"
+                    href="https://www.facebook.com/ALishia-Talent-Management-107450727437819/"
+                    ><i class="fa fa-facebook"></i
+                  ></a>
                 </li>
                 <li>
                   <a target="_blank" href="" class="active"
                     ><i style="color: white" class="fa fa-twitter"></i
                   ></a>
                 </li>
+
                 <li>
-                  <a href="#"><i class="fa fa-google-plus"></i></a>
-                </li>
-                <li>
-                  <a href="#" class="last"><i class="fa fa-linkedin"></i></a>
+                  <a
+                    href="https://www.linkedin.com/in/alishia-talent-management-03589819a"
+                    class="last"
+                    ><i class="fa fa-linkedin"></i
+                  ></a>
                 </li>
               </ul>
             </div>
