--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 
 <!-- Mirrored from codelayers.net/lemoni/fullwidth/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 25 Jun 2021 04:26:55 GMT -->
 <head>
-<title>Lemoni - Multipurpose HTML5 Template</title>
+<title>Interview-Saarthi</title>
 <meta charset="utf-8">
 <!-- Meta -->
 <meta name="keywords" content="" />
@@ -111,9 +111,9 @@
             <div class="top_nav">
               <div class="container">
                 <div class="left">
-                  <a href="mailto:info@yourdomain.com"
+                  <a href="mailto:careers@alishia.co.in"
                     ><i class="fa fa-envelope-o"></i>
-                    &nbsp;info@yourdomain.com</a
+                    &nbsp;careers@alishia.co.in</a
                   >
                   <span
                     ><i class="fa fa-phone"></i> &nbsp;+9188 123 456 7890</span
@@ -124,20 +124,21 @@
                     <li>
                       <a
                         target="_blank"
-                        href="https://www.facebook.com/codelayers"
+                        href="https://www.facebook.com/ALishia-Talent-Management-107450727437819/"
                         ><i class="fa fa-facebook"></i
                       ></a>
                     </li>
                     <li>
-                      <a target="_blank" href="https://twitter.com/codelayers"
-                        ><i style="color: white" class="fa fa-twitter"></i
+                      <a target="_blank" href=""
+                        ><i class="fa fa-twitter"></i
                       ></a>
                     </li>
-                    <li>
-                      <a href="#"><i class="fa fa-google-plus"></i></a>
-                    </li>
+
                     <li class="last">
-                      <a href="#"><i class="fa fa-linkedin"></i></a>
+                      <a
+                        href="https://www.linkedin.com/in/alishia-talent-management-03589819a"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
                     </li>
                   </ul>
                 </div>
@@ -384,7 +385,7 @@
   <div class="clearfix"></div>
   <div class="header_medium two">
     <div class="container">
-      <h3 class="bigtext"><span>We are</span> Interview-Saarthi</h3>
+      <h3 class="bigtext"><span>We are</span> InterviewSaarthi</h3>
       <!-- <h3 class="smalltext"><span>We Creat</span> Unique Themes</h3> -->
     </div>
   </div>
@@ -707,18 +708,24 @@
             <div class="social_icons_holder">
               <ul class="social_icons">
                 <li>
-                  <a target="_blank" href=""><i class="fa fa-facebook"></i></a>
+                  <a
+                    target="_blank"
+                    href="https://www.facebook.com/ALishia-Talent-Management-107450727437819/"
+                    ><i class="fa fa-facebook"></i
+                  ></a>
                 </li>
                 <li>
                   <a target="_blank" href="" class="active"
                     ><i style="color: white" class="fa fa-twitter"></i
                   ></a>
                 </li>
+
                 <li>
-                  <a href="#"><i class="fa fa-google-plus"></i></a>
-                </li>
-                <li>
-                  <a href="#" class="last"><i class="fa fa-linkedin"></i></a>
+                  <a
+                    href="https://www.linkedin.com/in/alishia-talent-management-03589819a"
+                    class="last"
+                    ><i class="fa fa-linkedin"></i
+                  ></a>
                 </li>
               </ul>
             </div>
