--- a/our-team.html
+++ b/our-team.html
@@ -197,9 +197,9 @@
             <div class="top_nav">
               <div class="container">
                 <div class="left">
-                  <a href="mailto:info@yourdomain.com"
+                  <a href="mailto:careers@alishia.co.in"
                     ><i class="fa fa-envelope-o"></i>
-                    &nbsp;info@yourdomain.com</a
+                    &nbsp;careers@alishia.co.in</a
                   >
                   <span
                     ><i class="fa fa-phone"></i> &nbsp;+9188 123 456 7890</span
@@ -210,20 +210,21 @@
                     <li>
                       <a
                         target="_blank"
-                        href="https://www.facebook.com/codelayers"
+                        href="https://www.facebook.com/ALishia-Talent-Management-107450727437819/"
                         ><i class="fa fa-facebook"></i
                       ></a>
                     </li>
                     <li>
-                      <a target="_blank" href="https://twitter.com/codelayers"
-                        ><i style="color: white" class="fa fa-twitter"></i
+                      <a target="_blank" href=""
+                        ><i class="fa fa-twitter"></i
                       ></a>
                     </li>
-                    <li>
-                      <a href="#"><i class="fa fa-google-plus"></i></a>
-                    </li>
+
                     <li class="last">
-                      <a href="#"><i class="fa fa-linkedin"></i></a>
+                      <a
+                        href="https://www.linkedin.com/in/alishia-talent-management-03589819a"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
                     </li>
                   </ul>
                 </div>
@@ -803,21 +804,22 @@
           <div class="one_fourth">
             <div class="img_holder">
               <ul class="social_icon">
-                <li class="one">
-                  <a target="_blank" href="https://www.facebook.com/codelayers"
+                <li>
+                  <a
+                    target="_blank"
+                    href="https://www.facebook.com/ALishia-Talent-Management-107450727437819/"
                     ><i class="fa fa-facebook"></i
                   ></a>
                 </li>
-                <li class="two">
-                  <a target="_blank" href="https://twitter.com/codelayers"
-                    ><i class="fa fa-twitter"></i
+                <li>
+                  <a target="_blank" href=""><i class="fa fa-twitter"></i></a>
+                </li>
+
+                <li class="last">
+                  <a
+                    href="https://www.linkedin.com/in/alishia-talent-management-03589819a"
+                    ><i class="fa fa-linkedin"></i
                   ></a>
-                </li>
-                <li class="three">
-                  <a href="#"><i class="fa fa-google-plus"></i></a>
-                </li>
-                <li class="four">
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
                 </li>
               </ul>
               <div class="hover_circle"></div>
@@ -834,22 +836,23 @@
 
           <div class="one_fourth last">
             <div class="img_holder">
-              <ul class="social_icon">
-                <li class="one">
-                  <a target="_blank" href="https://www.facebook.com/codelayers"
+              <ul class="social_icons">
+                <li>
+                  <a
+                    target="_blank"
+                    href="https://www.facebook.com/ALishia-Talent-Management-107450727437819/"
                     ><i class="fa fa-facebook"></i
                   ></a>
                 </li>
-                <li class="two">
-                  <a target="_blank" href="https://twitter.com/codelayers"
-                    ><i class="fa fa-twitter"></i
+                <li>
+                  <a target="_blank" href=""><i class="fa fa-twitter"></i></a>
+                </li>
+
+                <li class="last">
+                  <a
+                    href="https://www.linkedin.com/in/alishia-talent-management-03589819a"
+                    ><i class="fa fa-linkedin"></i
                   ></a>
-                </li>
-                <li class="three">
-                  <a href="#"><i class="fa fa-google-plus"></i></a>
-                </li>
-                <li class="four">
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
                 </li>
               </ul>
               <div class="hover_circle"></div>
@@ -995,18 +998,21 @@
             <div class="social_icons_holder">
               <ul class="social_icons">
                 <li>
-                  <a target="_blank" href=""><i class="fa fa-facebook"></i></a>
-                </li>
-                <li>
-                  <a target="_blank" href="" class="active"
-                    ><i style="color: white" class="fa fa-twitter"></i
+                  <a
+                    target="_blank"
+                    href="https://www.facebook.com/ALishia-Talent-Management-107450727437819/"
+                    ><i class="fa fa-facebook"></i
                   ></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa fa-google-plus"></i></a>
+                  <a target="_blank" href=""><i class="fa fa-twitter"></i></a>
                 </li>
-                <li>
-                  <a href="#" class="last"><i class="fa fa-linkedin"></i></a>
+
+                <li class="last">
+                  <a
+                    href="https://www.linkedin.com/in/alishia-talent-management-03589819a"
+                    ><i class="fa fa-linkedin"></i
+                  ></a>
                 </li>
               </ul>
             </div>
